--- a/Sport-Finder/package.json
+++ b/Sport-Finder/package.json
@@ -47,6 +47,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.18.0",
     "react-native-picker-select": "^9.3.1",
