--- a/SportFinder/package.json
+++ b/SportFinder/package.json
@@ -20,11 +20,14 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.11.0",
     "@react-native-firebase/auth": "^21.11.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "^52.0.32",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -57,9 +60,7 @@
     "react-native-select-dropdown": "^4.0.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-auth-session": "~6.0.3",
-    "expo-dev-client": "~5.0.20"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
