--- a/SportFinder/app.json
+++ b/SportFinder/app.json
@@ -2,43 +2,23 @@
   "expo": {
     "name": "SportsFinder",
     "slug": "sportsfinder",
-    "scheme": "sportsfinder",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "sportsfinder",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.1157993245.SportsFinder",
-      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
-      "googleServicesFile": "./google-services.json",
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
       "package": "com.1157993245.Sportsfinder"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "@react-native-google-signin/google-signin",
-    [
-      "expo-splash-screen",
-      {
-        "image": "./assets/images/splash-icon.png",
-        "imageWidth": 200,
-        "resizeMode": "contain",
-        "backgroundColor": "#ffffff"
-      }
-    ]
-  ],
+    "plugins": [],
     "experiments": {
       "typedRoutes": true
     }
