Modified config file

--- a/SportFinder/app.json
+++ b/SportFinder/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "SportsFinder",
     "slug": "sportsfinder",
+    "owner": "1157993245",
     "version": "1.0.0",
     "orientation": "portrait",
     "scheme": "sportsfinder",
